# sinker

./: .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
src/: blacklist.txt  blocklist.rs  config.rs  handler.rs  main.rs
