[package]
name = "dns-sinker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-server = "0.25"
hickory-proto = "0.25"
hickory-resolver = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
esp-wifi-sys-esp32 = "0.1.0"
