[package]
name = "esp-sinker"
version = "0.1.0"
authors = ["Ramzy Zoldik <rabouzia@student.42.fr>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.2.3"

[[bin]]
name = "esp-sinker"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["alloc", "std"] }
anyhow = "1"
dns-parser = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }

[build-dependencies]
embuild = "0.33"